--- a/apps/frontend/App.razor
+++ b/apps/frontend/App.razor
@@ -5,7 +5,7 @@
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
-            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            <RouteView RouteData="@routeData" DefaultLayout="@typeof(PublicLayout)" />
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(PublicLayout)">
