--- a/apps/frontend/Pages/Storefront/Pages/StoreList.razor
+++ b/apps/frontend/Pages/Storefront/Pages/StoreList.razor
@@ -1,7 +1,5 @@
 @page "/stores"
-@using frontend.Models
-@namespace frontend.Pages.Storefront
-@using frontend.Pages.Shared.Components.Storefront
+@layout StorefrontLayout
 @inject NavigationManager NavigationManager
 
 <h3 class="text-2xl font-bold mb-6">All Stores</h3>
