--- a/apps/frontend/Pages/Storefront/Pages/Storefront.razor
+++ b/apps/frontend/Pages/Storefront/Pages/Storefront.razor
@@ -1,7 +1,5 @@
 @page "/storefront"
-@layout PublicLayout
-@using frontend.Models
-@using frontend.Pages.Shared.Components.Storefront
+@layout StorefrontLayout
 @inject NavigationManager NavigationManager
 
 <h3>Storefront</h3>
