--- a/apps/frontend/Pages/Storefront/_Imports.razor
+++ b/apps/frontend/Pages/Storefront/_Imports.razor
@@ -1,1 +1,3 @@
-@layout StorefrontLayout
+@using frontend.Models
+@namespace frontend.Pages.Storefront
+@using frontend.Pages.Shared.Components.Storefront
