--- a/apps/frontend/Pages/Storefront/Pages/CategoryProducts.razor
+++ b/apps/frontend/Pages/Storefront/Pages/CategoryProducts.razor
@@ -1,8 +1,5 @@
 @page "/category/{Category}"
-@using frontend.Models
-@namespace frontend.Pages.Storefront
-@using frontend.Pages.Shared.Components.Storefront
-
+@layout StorefrontLayout
 @inject NavigationManager NavigationManager
 
 <h3 class="text-2xl font-bold mb-4">Category: @Category</h3>
