--- a/apps/frontend/Pages/Storefront/Pages/StoreProducts.razor
+++ b/apps/frontend/Pages/Storefront/Pages/StoreProducts.razor
@@ -1,7 +1,5 @@
 @page "/store/{MerchantId}"
-@using frontend.Models
-@namespace frontend.Pages.Storefront
-@using frontend.Pages.Shared.Components.Storefront
+@layout StorefrontLayout
 @inject NavigationManager NavigationManager
 
 <h3 class="text-2xl font-bold mb-4">@Merchant?.Name</h3>
