--- a/apps/frontend/Pages/Shared/Components/Icons/LucideIcon.razor
+++ b/apps/frontend/Pages/Shared/Components/Icons/LucideIcon.razor
@@ -82,6 +82,10 @@
             <path d="M13 17V9"/><path d="M18 17V5"/><path d="M3 3v16a2 2 0 0 0 2 2h16"/><path d="M8 17v-3"/>
             break;
 
+        case "close":
+            <path d="M18 6 6 18"/><path d="m6 6 12 12"/>
+            break;
+            
         default:
             <circle cx="12" cy="12" r="9" />;
             break;
