--- a/apps/frontend/Pages/Customer/_Imports.razor
+++ b/apps/frontend/Pages/Customer/_Imports.razor
@@ -1,1 +1,6 @@
-@layout CustomerLayout
+@using frontend.Models
+@using frontend.Pages.Shared.Components
+@using frontend.Pages.Shared.Components.OrderSummary
+@using frontend.Pages.Shared.Components.PaymentMethods
+@using frontend.Pages.Shared.Components.PaymentForm
+@using frontend.Pages.Shared.Components.Tables
