--- a/apps/frontend/Pages/Admin/Pages/LiveMap.razor
+++ b/apps/frontend/Pages/Admin/Pages/LiveMap.razor
@@ -1,4 +1,5 @@
 @page "/admin/map"
+@layout AdminLayout
 @namespace frontend.Pages.Admin.LiveMap
 
 <div class="flex-1 overflow-hidden" style="height:calc(100vh - 4rem);">
