--- a/apps/frontend/Pages/Admin/Pages/Profile.razor
+++ b/apps/frontend/Pages/Admin/Pages/Profile.razor
@@ -1,7 +1,6 @@
 @page "/admin/profile"
+@layout AdminLayout
 @using System.Security.Claims
-@using frontend.Pages.Shared.Components.Modals
-@using frontend.Models
 @inject AuthenticationStateProvider AuthProvider
 @inject NavigationManager Navigation
 @inject ToastService ToastService
@@ -9,7 +8,7 @@
 
 <PageTitle>User Profile</PageTitle>
 
-<div class="max-w-3xl mx-auto mt-10 p-6  shadow-lg rounded-2xl space-y-6">
+<div class="max-w-3xl mx-auto mt-10 p-6 bg-white shadow-lg rounded-2xl space-y-6">
 
     <!-- HEADER -->
     <div class="flex items-center space-x-4">
