--- a/apps/frontend/Pages/Admin/Pages/Settings.razor
+++ b/apps/frontend/Pages/Admin/Pages/Settings.razor
@@ -1,7 +1,7 @@
 @page "/admin/settings"
+@layout AdminLayout
 @using System.ComponentModel.DataAnnotations
 @using System.Net.Http.Json
-@using frontend.Pages.Shared.Components.Modals
 @inject UserService UserService
 @inject ToastService ToastService
 
