--- a/apps/frontend/Pages/Admin/Pages/InvoicePage.razor
+++ b/apps/frontend/Pages/Admin/Pages/InvoicePage.razor
@@ -1,7 +1,7 @@
 @page "/admin/invoices"
 @layout AdminLayout
 
-@inject InvoiceService InvoiceService
+@* @inject InvoiceService InvoiceService *@
 
 <PageTitle>Invoices</PageTitle>
 
@@ -34,13 +34,13 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await LoadInvoices();
-        Summary = await InvoiceService.GetSummaryAsync();
+        @* await LoadInvoices();
+        Summary = await InvoiceService.GetSummaryAsync(); *@
     }
 
     private async Task LoadInvoices()
     {
-        Invoices = await InvoiceService.GetAllAsync();
+        @* Invoices = await InvoiceService.GetAllAsync(); *@
     }
 
     private void ViewInvoice(Invoice invoice)
