--- a/apps/frontend/Pages/Customer/Pages/Checkout.razor
+++ b/apps/frontend/Pages/Customer/Pages/Checkout.razor
@@ -1,7 +1,7 @@
-@page "/checkout/{InvoiceId:guid}"
+@page "/customer/checkout"
 @layout CustomerLayout
 
-@inject PaymentService PaymentService
+@* @inject PaymentService PaymentService *@
 
 <PageTitle>Checkout</PageTitle>
 
@@ -36,13 +36,13 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Invoice = await PaymentService.GetInvoiceAsync(InvoiceId);
+        @* Invoice = await PaymentService.GetInvoiceAsync(InvoiceId); *@
     }
 
     private async Task HandlePayment()
     {
-        IsProcessing = true;
+        @* IsProcessing = true;
         PaymentResult = await PaymentService.ProcessPaymentAsync(InvoiceId, SelectedMethod);
-        IsProcessing = false;
+        IsProcessing = false; *@
     }
 }
